solved:dark mode problem and add data into dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
   padding: 2rem;
   text-align: center;
 }
-
+.test{
+  background-color: #323232;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
